Trying to fix sticky scrolling on mobile.

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -40,6 +40,7 @@ body {
 
   #root div.page {
     height: 100vh;
+    -webkit-overflow-scrolling: touch;
     overflow-y: scroll;
 
     section {
